html css updates

--- a/About.html
+++ b/About.html
@@ -22,15 +22,17 @@
   </section>
 
   <section>
-    <section class="main-banner">
+    <section class="about-main">
       <h2> I'm Julianna, a UX Designer committed
         to creating products that will help
         underrepresented communities thrive. </h2>
         <br>
-    <hr class= "section-divider">
   </section>
+    <hr class= "main-divider">
+
+
   <section class="bio">
-    <h2> THE JOURNEY </h2>
+    <h2\> THE JOURNEY </h2>
     <p> My design career is rooted in curiosity. As a child, I was always interested in
       the why of things and solving problems so when we got our first computer
       at home, I immersed myself in learning it's functionality to the point that I was
