--- a/Billow.html
+++ b/Billow.html
@@ -33,8 +33,8 @@
         <br>
         <a href="https://invis.io/V5V9M8AMKZ9">View Prototype</a>
       </div>
-    <hr class="section-divider2">
     </section>
+      <hr class="orange-divider">
 
     <section class="problem-banner">
       <div class="p1-container">
@@ -48,8 +48,8 @@
       exploring features like collaboration, link storage, organization, and
       customization that optimize the collaborative process.
     </div>
-    <hr class="section-divider2">
     </section>
+      <hr class="section-divider2">
 
 
     <section class="solution">
@@ -65,46 +65,54 @@
       their files and content as well as reducing the amount of external communication
        with real-time collaboration tools.
      </div>
-        <hr class="section-divider2">
+     <hr class="section-divider2">
     </section>
 
+
     <section class="user-research">
-      <h2>Research</h2>
-      <h3>User Survey</h3>
-      <p>The solutions I came up with are based on the insights gathered on the
-      user surveys where I learned if participants use or don’t use cloud storage,
-      why to use it, what their frustrations, which features they prioritize
-      are and what would motivate them to use it.
-      The survey was completed by 19 participants.</p>
-      <p><a href="#">View results</a></p>
-      <img class="insights" src="images/billow-insights.png" alt="Billow Insights" ></a>
-      <hr class="section-divider">
+      <div class="ur1">
+        <h2>Research</h2>
+        <h3>User Survey</h3>
+        <p>The solutions I came up with are based on the insights gathered on the
+        user surveys where I learned if participants use or don’t use cloud storage,
+        why to use it, what their frustrations, which features they prioritize
+        are and what would motivate them to use it.
+        The survey was completed by 19 participants.</p>
+        <p><a href="#">View results</a></p>
+      </div>
+        <img class="insights" src="images/billow-insights.png" alt="Billow Insights" ></a>
     </section>
-    <section>
+  <hr class="section-divider2">
+
+    <section class="user-personas">
+      <div class="up-container">
       <h2>User Personas</h2>
       <p>Based on the user surveys, I was able to identify two types of users;
       the non-user who’s hesitant about using cloud storage because it seems
       overwhelming and the active user who is interested in trying out a new
       service that meets her needs.
+    </div>
       <br>
+      <div class="mariap-container">
       <img class="user-persona" src="images/mariap.png" alt="Maria User Persona" ></a>
       <p><strong>Maria P.</strong>
-      Ux Designer
-      Age: 27/Location: Seattle, WA
-      a María is a UX designer based in Seattle,
+      <p>Ux Designer</p>
+      <p>Age: 27/Location: Seattle, WA</p>
+      <p>María is a UX designer based in Seattle,
       Washington. She splits her time between working
       at a design studio full time and developing her
       personal project which is related to altering
       clothing and sustainability.As a UX enthusiast,
       she is always open to trying out new products
-      especially if they will meet her needs.
+      especially if they will meet her needs.</p>
+    </div>
       <br>
-    </p>
+<div class="luisr-container">
       <img class="user-persona" src="images/luisr.png" alt="Luis User Persona" ></a>
-      <p><strong>Luis R.</strong>
-      Ux Designer
-      Age: 31/Location: Brooklyn, NY
-      Luis has been a copywriter for 6+ years and is
+      <p>Luis R.</p>
+      <p>Ux Designer </p>
+      <p>Age: 31/Location: Brooklyn, NY</p>
+      <p>Luis has been a copywriter for 6+ years and is
       currently based in New York. Outside of work,
       he’s a music enthusiasts and enjoys going to
       concerts frequently. Luis is a creature of habits
@@ -113,7 +121,8 @@
       service out if it’s user friendly and easy to
     navigate.
     </p>
-      <hr class="section-divider">
+  </div>
+      <hr class="section-divider2">
     </section>
     <section>
       <h2>Information Architecture</h2>
@@ -176,8 +185,9 @@
   </tr>
 </table>
 <img class="user-flows" src="images/user-flows.png" alt="Billow User Flows" ></a>
-<hr class="section-divider">
     </section>
+    <hr class="section-divider2">
+
     <section>
       <h3>Competitive Analysis</h3>
       <img class="competitor" src="images/airtable.png" alt="Airtable Logo" >
@@ -192,7 +202,7 @@
         a lot of opportunities to cover user's needs and concerns that these competitors don’t offer like storage space,
         file organization, collaboration and sharing options, security, and creating documents.
       </p>
-        <hr class="section-divider">
+        <hr class="section-divider2">
     </section>
 
   <section>
@@ -213,8 +223,9 @@
 <p>- Revise the wording on the upload window’s CTA it can say upload rather than open to avoid
   confusion</p>
   <p>- Adding file/folder information on the dashboard (list view) as suggested by Manuel</p>
-  <hr class="section-divider">
   </section>
+  <hr class="section-divider2">
+
 <section>
   <h2>Designing the logo to evoke a feeling of Ease </h2>
   <h3>The brand</h3>
@@ -236,8 +247,9 @@
   <a href="https://www.figma.com/proto/spSSkRZ4R5TJz9i1SCzw2W/Billow-Style-Guide?node-id=0%3A2&viewport=166%2C171%2C0.16887666285037994&scaling=min-zoom">See Brand Guidelines</a>
   <br>
   <img src="images/billow-brand.png" alt="Billow Brand">
-  <hr class="section-divider">
 </section>
+<hr class="section-divider2">
+
 <section>
   <h2>Hi-Fi MockuPS</h2>
   <p>Following the branding, requirements and user flows,
@@ -262,7 +274,7 @@
   <p>- Revise link sharing options on sharing screen
 </p>
 <img src="images/hifimockups.png" alt="Billow Hi Fi Mockups">
-<hr class="section-divider">
+<hr class="section-divider2">
 </section>
 <section>
   <h2>Preference testing</h2>
@@ -271,9 +283,9 @@
   <img src="images/usertest1.png" alt="Billow User Test 1">
   <img src="images/usertest2.png" alt="Billow User Test 2">
   <img src="images/usertest3.png" alt="Billow User Test 3">
-  <hr class="section-divider">
+  <hr class="section-divider2">
 </section>
-<section>
+<section class="result">
   <h2>The final result</h2>
   <p>After a few rounds of revisions based on results from user testing, I finalized the cloud service.
     <br>Minor tweaks were implemented in this round according to the user’s feedback.
@@ -293,6 +305,7 @@
   <h3></h3>
   <button onclick="topFunction()" id="myBtn" title="Go to top">Back To Top</button>
 </section>
+
       <footer>
         <hr>
         <section>
