--- a/Contact.html
+++ b/Contact.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css?family=Public+Sans:200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
   </head>
 <body>
-  <div class= "contact-container">
-  <section>
+  <div class= "container">
+  <section class="main-menu">
     <a href="Index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo"></a>
     <nav class="topnav">
     <a class="active" href="Index.html">Work</a>
@@ -29,23 +29,12 @@
 
 <section>
     <form action="https://formspree.io/mdodgjzb" method="POST">
-      <label>
-        Name:
-        <input type="text" name="_replyto">
-      </label>
-  <label>
-    Your email:
-    <input type="text" name="_replyto">
-  </label>
-  <label>
-    Your message:
-    <textarea name="message"></textarea>
-  </label>
+        <input value= "Name" type="text" name="_replyto">
+    <input value="Email" type="text" name="_replyto">
+    <textarea name="message">Message</textarea>
 </section>
 <button type="submit">Send</button>
 </form>
-  <footer>
-    <hr>
     <footer>
       <hr>
       <section>
@@ -57,8 +46,6 @@
     <!-- Copyright -->
   <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
     </footer>
-  <!-- Copyright -->
-<p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
 </div>
   </body>
 </html>
