--- a/About.html
+++ b/About.html
@@ -32,7 +32,7 @@
 
 
   <section class="bio">
-    <h2\> THE JOURNEY </h2>
+    <h2> THE JOURNEY </h2>
     <p> My design career is rooted in curiosity. As a child, I was always interested in
       the why of things and solving problems so when we got our first computer
       at home, I immersed myself in learning it's functionality to the point that I was
