--- a/Billow.html
+++ b/Billow.html
@@ -124,14 +124,13 @@
   </div>
       <hr class="section-divider2">
     </section>
-    <section>
+    <section class="ia">
       <h2>Information Architecture</h2>
       <h3>User Flows & User Stories </h3>
-      For the user stories, I focused on what survey participants and personas
+    <p> For the user stories, I focused on what survey participants and personas
       prioritized. I compiled a list of high and medium priorities to reach
       the minimum viable product. Based on the user stories, I created user
-      flows to show how users will complete these tasks.
-  </p>
+      flows to show how users will complete these tasks. </p>
   <table>
   <tr>
   <th>User Type</th>
@@ -139,7 +138,7 @@
   <th>Priority</th>
   </tr>
   <tr>
-  <td>As a new user</td>
+  <td >As a new user</td>
   <td>Choose initial Folder Organization</td>
   <td>High</td>
   </tr>
@@ -186,9 +185,8 @@
 </table>
 <img class="user-flows" src="images/user-flows.png" alt="Billow User Flows" ></a>
     </section>
-    <hr class="section-divider2">
 
-    <section>
+    <section class="ca-section">
       <h3>Competitive Analysis</h3>
       <img class="competitor" src="images/airtable.png" alt="Airtable Logo" >
       <img class="competitor" src="images/googledrive.png" alt="Google Drive Logo" >
@@ -259,22 +257,26 @@
    both tiers of user personas.
 </p>
   <a href="#">See Mockups</a>
-  <h3>Usability testing 2.0</h3>
-  <p>After implementing the branding and initial changes based on the
-   first round of user testing and adding the branding, I focused this
-   test on similar tasks to make sure that users understand and are
-   able to use the app seamlessly.</p>
-  <p>Key takeaways:</p>
-  <p>- Change colors on bottom CTA on the homepage so they are easier
-  to read</p>
-  <p>- Add icons or some text on the first enrollment screen so that users
-  understand what choosing a free account versus a paid one entails.</p>
-  <p>- Adding the option to see “date created” on the list view of the
-  dashboard</p>
-  <p>- Revise link sharing options on sharing screen
+
+</section>
+<section class="ut-section">
+<h3>Usability testing 2.0</h3>
+<p>After implementing the branding and initial changes based on the
+ first round of user testing and adding the branding, I focused this
+ test on similar tasks to make sure that users understand and are
+ able to use the app seamlessly.</p>
+<p>Key takeaways:</p>
+<p>- Change colors on bottom CTA on the homepage so they are easier
+to read</p>
+<p>- Add icons or some text on the first enrollment screen so that users
+understand what choosing a free account versus a paid one entails.</p>
+<p>- Adding the option to see “date created” on the list view of the
+dashboard</p>
+<p>- Revise link sharing options on sharing screen
 </p>
 <img src="images/hifimockups.png" alt="Billow Hi Fi Mockups">
-<hr class="section-divider2">
+
+  <hr class="section-divider2">
 </section>
 <section>
   <h2>Preference testing</h2>
