--- a/BusyBus.html
+++ b/BusyBus.html
@@ -19,6 +19,95 @@
       <a href="#contact">Contact</a>
       </nav>
     </section>
+    <section>
+      <img src="" alt="">
+    <h1>BUSYBUS</h1>
+    <p>Role: Ux Designer, Visual Designer, UX Research</p>
+    <p>Tools: Figma, Github, Paper Prototypes</p>
+    <p>Deliverables: User Surveys, Competitive Analysis, User Stories, Paper Prototype, Wireframes, User Testing, Visual Design</p>
+    <a href="#">View Prototype</a>
+    </section>
+    <hr class="section-divider2">
+
+    <section>
+      <h2>PROBLEM</h2>
+      <p>Riders are complaining about not knowing when their bus is arriving to the Washington & State stop. They can no longer assume the bus they see in the distance is theirs because several new bus routes have recently been added.</p>
+    </section>
+    <hr class="section-divider2">
+
+    <section>
+      <h2>SOLUTION</h2>
+      <p>Busy Bus is designed to logically show riders in a very simple screen what buses are arriving next to the Washington & State stop and how much time they have to get to the bus.
+</p>
+    </section>
+    <hr class="section-divider2">
+
+    <section>
+      <h2>RESEARCH</h2>
+      <h3>USER SURVEY</h3>
+      <p> I asked questions related to commuting apps currently used, what features they enjoy, what’s most frustrating to users and what new features they would like to see. </p>
+<a href="#">View results</a>
+    </section>
+    <section>
+      <h3>COMPETITIVE ANALYSIS</h3>
+       <p> I analyzed Google Maps and Transit app, my overall perception was that one of these two competitors
+          would solve and/or cover the needs of bus riders but to my surprise, none of them really do which indicates that BusyBus
+          could become a favorite as far as bus riders.</p>
+    </section>
+    <hr class="section-divider2">
+
+    <section>
+      <h2>INFORMATION ARCHITECTURE</h2>
+      <h3>USER STORIES</h3>
+      <p> I selected the most relevant tasks to the MVP for my initial prototypes which includes adding destination and setting up notifications.</p>
+      <table>
+      <tr>
+      <th>User Type</th>
+      <th>Action</th>
+      <th>Priority</th>
+      </tr>
+      <tr>
+      <td> All Users</td>
+      <td>notification when bus line is arriving to the departing stop</td>
+      <td>High</td>
+      </tr>
+      <tr>
+      <td>All Users</td>
+      <td>reminder to leave to the bus stop</td>
+      <td>High</td>
+      </tr>
+      <tr>
+      <td>All users</td>
+      <td>See nearby bus lines</td>
+      <td>Medium</td>
+      </tr>
+      <tr>
+      <td>All users</td>
+      <td>add destination address</td>
+      <td>Medium</td>
+      </tr>
+    </table>
+    </section>
+<hr class="section-divider2">
+
+<section>
+  <h2>Paper Prototype</h2>
+  <p>These screens are  based on actions all users can take when opening the app to plan their bus commute. They can see their currently location, choose their prefered route and choose which alerts they want to receive for the particular bus they chose.</p>
+  <img src="" alt="">
+</section>
+
+<section>
+  <h3></h3>
+  <p>In this phase, I asked users to go through the process of searching and selecting a route and setting up their notifications./p>
+  <p>Key Takeaways:</p>
+  <p>- For screen #2 clearer icons on the real time pointers that include bus numbers (probably bigger text and highlight them with a box). </p>
+  <p>- For screen #3 the title on the header should have a different wording so that users are not confused as far as what kind of alerts or notifications they are choosing. This screen is to save particular notifications for a specific trip rather than general notifications. </p>
+  <p>- The text below the chosen bus line that reads “Notify me when” could be switched over to the header and this could help with avoiding further confusion on this screen. For the save button at the bottom of screen #3, I would switch it to a call to action like “go” rather than “save” so users know that they have begun tracking their commute according to the alerts they chose.</p>
+
+</section>
+
+
+
     <footer>
       <hr>
       <section>
