--- a/Billow.html
+++ b/Billow.html
@@ -34,7 +34,9 @@
         <a href="https://invis.io/V5V9M8AMKZ9">View Prototype</a>
       </div>
     </section>
-      <hr class="orange-divider">
+    <hr class="orange-divider">
+
+
 
     <section class="problem-banner">
       <div class="p1-container">
@@ -200,8 +202,9 @@
         a lot of opportunities to cover user's needs and concerns that these competitors don’t offer like storage space,
         file organization, collaboration and sharing options, security, and creating documents.
       </p>
-        <hr class="section-divider2">
     </section>
+      <hr class="ca-divider">
+
 
   <section>
     <h2>Wireframes</h2>
@@ -309,7 +312,7 @@ dashboard</p>
 </section>
 
       <footer>
-        <hr>
+        <hr class="f-divider">
         <section>
           <a class="Contact" href="Contact.html">CONTACT</a>
           <a href="https://github.com/julsrodd"><img src="/images/github-icon.png" alt="github"></a>
