--- a/About.html
+++ b/About.html
@@ -30,7 +30,6 @@
   </section>
     <hr class= "main-divider">
 
-
   <section class="bio">
     <h2> THE JOURNEY </h2>
     <p> My design career is rooted in curiosity. As a child, I was always interested in
@@ -85,8 +84,9 @@
 </p>
   </section>
 
+
     <footer>
-      <hr>
+      <hr class="f-divider">
       <section>
         <a class="Contact" href="Contact.html">CONTACT</a>
         <a href="https://github.com/julsrodd"><img src="/images/github-icon.png" alt="github"></a>
