--- a/Contact.html
+++ b/Contact.html
@@ -20,32 +20,28 @@
     </nav>
   </section>
   <section class="contact-cta">
-    <div class="c2-container">
     <h2>LET’S CHAT!</h2>
     <p>I am always down for making new connections and talk
       <br>about design. Please feel free to contact me.
-    </div>
-    </section>
-
-<section>
+    <div class="c2-container">
     <form action="https://formspree.io/mdodgjzb" method="POST">
         <input value= "Name" type="text" name="_replyto">
     <input value="Email" type="text" name="_replyto">
     <textarea name="message">Message</textarea>
-</section>
 <button type="submit">Send</button>
 </form>
+</div>
+  </section>
+
     <footer>
-      <hr>
-      <section>
+    <hr class="f-divider">
         <a class="Contact" href="Contact.html">CONTACT</a>
         <a href="https://github.com/julsrodd"><img src="/images/github-icon.png" alt="github"></a>
         <a href="https://www.linkedin.com/in/juliannarodriguezdolsen/"><img src="/images/linkedin-icon.png" alt="linkedin"></a>
         <a href="https://dribbble.com/julsrod"><img src="images/dribbble-icon.png" alt="dribbble"></a>
-      </section>
     <!-- Copyright -->
   <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
-    </footer>
+</footer>
 </div>
   </body>
 </html>
