--- a/Contact.html
+++ b/Contact.html
@@ -20,9 +20,9 @@
     </nav>
   </section>
   <section class="contact-cta">
-    <h2>LET’S CHAT!</h2>
+    <h1>LET’S CHAT!</h1>
     <p>I am always down for making new connections and talk
-      <br>about design. Please feel free to contact me.
+      about design. Please feel free to contact me. </p>
     <div class="c2-container">
     <form action="https://formspree.io/mdodgjzb" method="POST">
         <input value= "Name" type="text" name="_replyto">
