billlow case study updates

--- a/Billow.html
+++ b/Billow.html
@@ -51,9 +51,7 @@
       customization that optimize the collaborative process.
     </div>
     </section>
-      <hr class="section-divider2">
-
-
+    <hr class="section-divider2">
     <section class="solution">
       <h2>Solution</h2>
       <img class="mockup" src="images/billow-mockup.png" alt="Billow Mockup 2" ></a>
@@ -190,9 +188,11 @@
 
     <section class="ca-section">
       <h3>Competitive Analysis</h3>
+      <div class="competitors">
       <img class="competitor" src="images/airtable.png" alt="Airtable Logo" >
       <img class="competitor" src="images/googledrive.png" alt="Google Drive Logo" >
       <img class="competitor" src="images/evernote.png" alt="Evernote" >
+    </div>
       <p>After completing this analysis, I realized that each of these apps has different advantages according
         to the user’s specific needs. For those looking to share files, documents, collaboration, and organizing
         all of these contents, google drive seems to be at the top. For users looking for more of a project management
@@ -206,16 +206,21 @@
       <hr class="ca-divider">
 
 
-  <section>
+  <section class="wireframes">
     <h2>Wireframes</h2>
+    <div class="wf-container">
     <img class="wireframes" src="images/wireframesketches.png" alt="Billow Wireframe Sketches" >
     <img class="wireframes" src="images/wireframes-lowfi.png" alt="Billow Low Fi Wireframes" >
+  </div>
     <p>
     In this phase, I gathered all insights from research and surveys to go back to the drawing board. It
     was clear that I needed to create a navigation that was easy to use for active users and non-users
     who might not be as tech-savvy or might feel overwhelmed with trying new systems.
     <a href="">See Wireframes</a>
   </p>
+</section>
+
+  <section class="ut-1">
   <h3>Usability Testing Round 1</h3>
   <p>This is where the iteration process began, the following are the key takeaways from this round:</p>
   <p>- Main CTA on homepage must be revised it should probably make reference to each of the
@@ -260,7 +265,7 @@
    both tiers of user personas.
 </p>
   <a href="#">See Mockups</a>
-
+  <img src="images/hifimockups.png" alt="Billow Hi Fi Mockups">
 </section>
 <section class="ut-section">
 <h3>Usability testing 2.0</h3>
@@ -277,8 +282,6 @@ understand what choosing a free account versus a paid one entails.</p>
 dashboard</p>
 <p>- Revise link sharing options on sharing screen
 </p>
-<img src="images/hifimockups.png" alt="Billow Hi Fi Mockups">
-
   <hr class="section-divider2">
 </section>
 <section>
