--- a/Billow.html
+++ b/Billow.html
@@ -52,6 +52,7 @@
     </div>
     </section>
     <hr class="section-divider2">
+
     <section class="solution">
       <h2>Solution</h2>
       <img class="mockup" src="images/billow-mockup.png" alt="Billow Mockup 2" ></a>
@@ -85,14 +86,14 @@
   <hr class="section-divider2">
 
     <section class="user-personas">
-      <div class="up-container">
       <h2>User Personas</h2>
       <p>Based on the user surveys, I was able to identify two types of users;
       the non-user who’s hesitant about using cloud storage because it seems
       overwhelming and the active user who is interested in trying out a new
       service that meets her needs.
-    </div>
-      <br>
+    </section>
+
+    <section class="up-2">
       <div class="mariap-container">
       <img class="user-persona" src="images/mariap.png" alt="Maria User Persona" ></a>
       <p><strong>Maria P.</strong>
@@ -106,8 +107,7 @@
       she is always open to trying out new products
       especially if they will meet her needs.</p>
     </div>
-      <br>
-<div class="luisr-container">
+      <div class="luisr">
       <img class="user-persona" src="images/luisr.png" alt="Luis User Persona" ></a>
       <p>Luis R.</p>
       <p>Ux Designer </p>
@@ -120,10 +120,12 @@
       like cloud storage but he is open to trying a
       service out if it’s user friendly and easy to
     navigate.
-    </p>
-  </div>
+  </p>
+</div>
+  </section>
+
       <hr class="section-divider2">
-    </section>
+
     <section class="ia">
       <h2>Information Architecture</h2>
       <h3>User Flows & User Stories </h3>
@@ -131,60 +133,63 @@
       prioritized. I compiled a list of high and medium priorities to reach
       the minimum viable product. Based on the user stories, I created user
       flows to show how users will complete these tasks. </p>
-  <table>
-  <tr>
-  <th>User Type</th>
-  <th>Action</th>
-  <th>Priority</th>
-  </tr>
-  <tr>
-  <td >As a new user</td>
-  <td>Choose initial Folder Organization</td>
-  <td>High</td>
-  </tr>
-  <tr>
-  <td>As a new user</td>
-  <td>Choose membership type</td>
-  <td>High</td>
-  </tr>
-  <tr>
-  <td>All users</td>
-  <td>Upload content (images,pdfs, documents)</td>
-  <td>High</td>
-  </tr>
-  <tr>
-  <td>All users</td>
-  <td>Share files with others</td>
-  <td>High</td>
-  </tr>
-  <tr>
-  <td>All users</td>
-  <td>Collaborate with others in real time on documents, spreadsheets and notes</td>
-  <td>High</td>
-  </tr>
-  <tr>
-  <td>All users</td>
-  <td>Share folders with others</td>
-  <td>High</td>
-  </tr>
-  <tr>
-  <td>All users</td>
-  <td>Create documents</td>
-  <td>Medium</td>
-  </tr>
-  <tr>
-  <td>As a new user</td>
-  <td>Sign up</td>
-  <td>Low</td>
-  </tr>
-  <tr>
-  <td>As a returning user</td>
-  <td>Sign in</td>
-  <td>low</td>
-  </tr>
-</table>
-<img class="user-flows" src="images/user-flows.png" alt="Billow User Flows" ></a>
     </section>
+        <section class="table">
+          <table>
+          <tr>
+          <th>User Type</th>
+          <th>Action</th>
+          <th>Priority</th>
+          </tr>
+          <tr>
+          <td >As a new user</td>
+          <td>Choose initial Folder Organization</td>
+          <td>High</td>
+          </tr>
+          <tr>
+          <td>As a new user</td>
+          <td>Choose membership type</td>
+          <td>High</td>
+          </tr>
+          <tr>
+          <td>All users</td>
+          <td>Upload content (images,pdfs, documents)</td>
+          <td>High</td>
+          </tr>
+          <tr>
+          <td>All users</td>
+          <td>Share files with others</td>
+          <td>High</td>
+          </tr>
+          <tr>
+          <td>All users</td>
+          <td>Collaborate with others in real time on documents, spreadsheets and notes</td>
+          <td>High</td>
+          </tr>
+          <tr>
+          <td>All users</td>
+          <td>Share folders with others</td>
+          <td>High</td>
+          </tr>
+          <tr>
+          <td>All users</td>
+          <td>Create documents</td>
+          <td>Medium</td>
+          </tr>
+          <tr>
+          <td>As a new user</td>
+          <td>Sign up</td>
+          <td>Low</td>
+          </tr>
+          <tr>
+          <td>As a returning user</td>
+          <td>Sign in</td>
+          <td>low</td>
+          </tr>
+        </table>
+        <img class="user-flows" src="images/user-flows.png" alt="Billow User Flows" ></a>
+        </section>
+
 
     <section class="ca-section">
       <h3>Competitive Analysis</h3>
@@ -212,12 +217,13 @@
     <img class="wireframes" src="images/wireframesketches.png" alt="Billow Wireframe Sketches" >
     <img class="wireframes" src="images/wireframes-lowfi.png" alt="Billow Low Fi Wireframes" >
   </div>
+  <div class="wf-2">
     <p>
     In this phase, I gathered all insights from research and surveys to go back to the drawing board. It
     was clear that I needed to create a navigation that was easy to use for active users and non-users
-    who might not be as tech-savvy or might feel overwhelmed with trying new systems.
-    <a href="">See Wireframes</a>
-  </p>
+    who might not be as tech-savvy or might feel overwhelmed with trying new systems.</p>
+<a href="https://www.figma.com/proto/85UE5MVqKcip1PvJ23IcLP/Cloud-Storage-Wireframes?node-id=71245%3A1&viewport=456%2C53%2C0.04617941752076149&scaling=scale-down">See Wireframes</a>
+</div>
 </section>
 
   <section class="ut-1">
@@ -233,6 +239,7 @@
   <hr class="section-divider2">
 
 <section>
+  <div class="brand-1">
   <h2>Designing the logo to evoke a feeling of Ease </h2>
   <h3>The brand</h3>
   <p>The brand name stands to represent a cloud but also how this service flows for users as far as it’s features of
@@ -240,9 +247,13 @@
    also give users a  sense of effortlessness. I chose this direction so it appeals to all kinds of users (individuals
    and teams) that will be using the product while keeping in mind that some can find cloud storage services confusing.
 </p>
+</div>
+
   <img src="images/logosketches.png" alt="Billow Logo Sketches">
+  <div class="bp-right">
   <img src="images/billow-moodboard.png" alt="Billow Brand Moodboard">
   <img src="images/billowbw.png" alt="Billow Black And White Logo">
+</div>
   <h3>Color Palette & Style Guide</h3>
   <p>Based on the mood, the brand assets where created. The logo
    icon is a reinterpretation of a cloud to continue to evoke that
