--- a/Contact.html
+++ b/Contact.html
@@ -20,9 +20,11 @@
     </nav>
   </section>
   <section class="contact-cta">
+    <div class="left-cta">
     <h1>LET’S CHAT!</h1>
     <p>I am always down for making new connections and talk
       about design. Please feel free to contact me. </p>
+    </div>
     <div class="c2-container">
     <form action="https://formspree.io/mdodgjzb" method="POST">
         <input value= "Name" type="text" name="_replyto">
