--- a/Billow.html
+++ b/Billow.html
@@ -238,8 +238,7 @@
   </section>
   <hr class="section-divider2">
 
-<section>
-  <div class="brand-1">
+<section class="brand-1">
   <h2>Designing the logo to evoke a feeling of Ease </h2>
   <h3>The brand</h3>
   <p>The brand name stands to represent a cloud but also how this service flows for users as far as it’s features of
@@ -247,27 +246,33 @@
    also give users a  sense of effortlessness. I chose this direction so it appeals to all kinds of users (individuals
    and teams) that will be using the product while keeping in mind that some can find cloud storage services confusing.
 </p>
-</div>
-
-  <img src="images/logosketches.png" alt="Billow Logo Sketches">
+</section>
+<section class="brand-2">
+  <img class="logo-sketches" src="images/logosketches.png" alt="Billow Logo Sketches">
   <div class="bp-right">
-  <img src="images/billow-moodboard.png" alt="Billow Brand Moodboard">
+  <img class="moodboard" src="images/billow-moodboard.png" alt="Billow Brand Moodboard">
   <img src="images/billowbw.png" alt="Billow Black And White Logo">
+</section>
+
+<section class="palette">
+  <div class="bb-1">
+    <h3>Color Palette & Style Guide</h3>
+    <p>Based on the mood, the brand assets where created. The logo
+     icon is a reinterpretation of a cloud to continue to evoke that
+     feeling of calmness and simplicity. For the logo, I chose a gradient
+     using the lighter blue to light pink. This same gradient is used subtly
+     in some elements like icons and banners. The main accent color is the
+     darker blue which creates balance and harmony with the rest of the shades.</p>
+    <a href="https://www.figma.com/proto/spSSkRZ4R5TJz9i1SCzw2W/Billow-Style-Guide?node-id=0%3A2&viewport=166%2C171%2C0.16887666285037994&scaling=min-zoom">See Brand Guidelines</a>
+  </div>
+
+<div class="billow-brand">
+    <img src="images/billow-brand.png" alt="Billow Brand">
 </div>
-  <h3>Color Palette & Style Guide</h3>
-  <p>Based on the mood, the brand assets where created. The logo
-   icon is a reinterpretation of a cloud to continue to evoke that
-   feeling of calmness and simplicity. For the logo, I chose a gradient
-   using the lighter blue to light pink. This same gradient is used subtly
-   in some elements like icons and banners. The main accent color is the
-   darker blue which creates balance and harmony with the rest of the shades.</p>
-  <a href="https://www.figma.com/proto/spSSkRZ4R5TJz9i1SCzw2W/Billow-Style-Guide?node-id=0%3A2&viewport=166%2C171%2C0.16887666285037994&scaling=min-zoom">See Brand Guidelines</a>
-  <br>
-  <img src="images/billow-brand.png" alt="Billow Brand">
 </section>
 <hr class="section-divider2">
 
-<section>
+<section class="hf-mock">
   <h2>Hi-Fi MockuPS</h2>
   <p>Following the branding, requirements and user flows,
    wireframes transformed into hi-fi mockups focused on the
@@ -276,24 +281,23 @@
    both tiers of user personas.
 </p>
   <a href="#">See Mockups</a>
+  <h3>Usability testing 2.0</h3>
+  <p>After implementing the branding and initial changes based on the
+   first round of user testing and adding the branding, I focused this
+   test on similar tasks to make sure that users understand and are
+   able to use the app seamlessly.</p>
+  <p>Key takeaways:</p>
+  <p>- Change colors on bottom CTA on the homepage so they are easier
+  to read</p>
+  <p>- Add icons or some text on the first enrollment screen so that users
+  understand what choosing a free account versus a paid one entails.</p>
+  <p>- Adding the option to see “date created” on the list view of the
+  dashboard</p>
+  <p>- Revise link sharing options on sharing screen
+  </p>
+  <div class="hf-mock2"
   <img src="images/hifimockups.png" alt="Billow Hi Fi Mockups">
-</section>
-<section class="ut-section">
-<h3>Usability testing 2.0</h3>
-<p>After implementing the branding and initial changes based on the
- first round of user testing and adding the branding, I focused this
- test on similar tasks to make sure that users understand and are
- able to use the app seamlessly.</p>
-<p>Key takeaways:</p>
-<p>- Change colors on bottom CTA on the homepage so they are easier
-to read</p>
-<p>- Add icons or some text on the first enrollment screen so that users
-understand what choosing a free account versus a paid one entails.</p>
-<p>- Adding the option to see “date created” on the list view of the
-dashboard</p>
-<p>- Revise link sharing options on sharing screen
-</p>
-  <hr class="section-divider2">
+</div>
 </section>
 <section>
   <h2>Preference testing</h2>
