--- a/About.html
+++ b/About.html
@@ -21,14 +21,12 @@
     </nav>
   </section>
 
-  <section>
     <section class="about-main">
       <h2> I'm Julianna, a UX Designer committed
         to creating products that will help
         underrepresented communities thrive. </h2>
         <br>
   </section>
-    <hr class= "main-divider">
 
   <section class="bio">
     <h2> THE JOURNEY </h2>
@@ -41,7 +39,9 @@
       with Microsoft Word and created a flyer that did the job. My teacher was impressed,
       and the work was presented at a college conference, she suggested I pursued a
       career in graphic design or advertising. </p>
+      <div class="bio-img">
       <img class="bio-photo" src="images/julianna-photo.png" alt= "julianna photo" >
+    </div>
       <p> In college, I pursued a degree in Advertising, where I took some design
         classes, but I still felt out of place, and my work was not pixel perfect. After
         graduating, I took a job at an apparel company where I learned the in's and
@@ -84,19 +84,24 @@
 </p>
   </section>
 
+  <section class="a-cta">
+  <h3>  Want to collaborate or just say hi? </h3>
+  <button type="button" id="contactme" title="Go to top">Contact Me</button>
+  </section>
 
-    <footer>
-      <hr class="f-divider">
-      <section>
-        <a class="Contact" href="Contact.html">CONTACT</a>
-        <a href="https://github.com/julsrodd"><img src="/images/github-icon.png" alt="github"></a>
-        <a href="https://www.linkedin.com/in/juliannarodriguezdolsen/"><img src="/images/linkedin-icon.png" alt="linkedin"></a>
-        <a href="https://dribbble.com/julsrod"><img src="images/dribbble-icon.png" alt="dribbble"></a>
-      </section>
-    <!-- Copyright -->
-  <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
-    </footer>
 
+
+        <footer>
+          <section class="f-left">
+            <!-- Copyright -->
+          <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
+          <div class="footer-right">
+            <a href="https://github.com/julsrodd"><img src="/images/github-icon.png" alt="github"></a>
+            <a href="https://www.linkedin.com/in/juliannarodriguezdolsen/"><img src="/images/linkedin-icon.png" alt="linkedin"></a>
+            <a href="https://dribbble.com/julsrod"><img src="images/dribbble-icon.png" alt="dribbble"></a>
+          </div>
+          </section>
+        </footer>
 </div>
 </body>
 </html>
