--- a/Billow.html
+++ b/Billow.html
@@ -265,7 +265,6 @@
      darker blue which creates balance and harmony with the rest of the shades.</p>
     <a href="https://www.figma.com/proto/spSSkRZ4R5TJz9i1SCzw2W/Billow-Style-Guide?node-id=0%3A2&viewport=166%2C171%2C0.16887666285037994&scaling=min-zoom">See Brand Guidelines</a>
   </div>
-
 <div class="billow-brand">
     <img src="images/billow-brand.png" alt="Billow Brand">
 </div>
@@ -273,6 +272,7 @@
 <hr class="section-divider2">
 
 <section class="hf-mock">
+  <div class="hf-mock1">
   <h2>Hi-Fi MockuPS</h2>
   <p>Following the branding, requirements and user flows,
    wireframes transformed into hi-fi mockups focused on the
@@ -295,25 +295,29 @@
   dashboard</p>
   <p>- Revise link sharing options on sharing screen
   </p>
-  <div class="hf-mock2"
+</div>
+  <div class="hf-mock2">
   <img src="images/hifimockups.png" alt="Billow Hi Fi Mockups">
 </div>
 </section>
-<section>
+<section class="pref-test">
   <h2>Preference testing</h2>
   <p>After receiving feedback from user testing interviews, I ran a preference test to get
   <br>even more clarity around specific items of the user interface.</p>
-  <img src="images/usertest1.png" alt="Billow User Test 1">
-  <img src="images/usertest2.png" alt="Billow User Test 2">
-  <img src="images/usertest3.png" alt="Billow User Test 3">
-  <hr class="section-divider2">
+  <div class="pref-test2">
+    <img src="images/usertest1.png" alt="Billow User Test 1">
+    <img src="images/usertest2.png" alt="Billow User Test 2">
+    <img src="images/usertest3.png" alt="Billow User Test 3">
+  </div>
 </section>
+
 <section class="result">
   <h2>The final result</h2>
   <p>After a few rounds of revisions based on results from user testing, I finalized the cloud service.
-    <br>Minor tweaks were implemented in this round according to the user’s feedback.
+  Minor tweaks were implemented in this round according to the user’s feedback.
 </p>
 <a href="https://invis.io/V5V9M8AMKZ9">Check out the prototype</a>
+<br>
   <h3>Takeaways</h3>
   <p>Creating this application taught me the importance of testing and prioritizing user’s needs and feedback
    rather than relying on intuition. This lesson came across multiple times in the visual design phase,
@@ -325,20 +329,28 @@
   understand and use the app without major issues. Lastly, I learned the importance of focusing on key
   screens first to ensure that the user’s frustrations and key needs are prioritized.
 </p>
-  <h3></h3>
-  <button onclick="topFunction()" id="myBtn" title="Go to top">Back To Top</button>
+</section>
+<section class="b-improv">
+  <h3>Future Improvements</h3>
+  <p>
+If I had more time, I would integrate additional key features  like  notes, spreadsheets and adding tags to allow users to create more types of content quickly, engage even further with their teams or clients. I would also work on filtering and sorting options for the dashboard as well as integrations (Design Tools, Project Management, Calendars) so that users have flexibility in their process.
+</p>
+  <button onclick="topFunction().href='billow-banner'" id="myBtn" title="Go to top">Back To Top</button>
 </section>
 
+
+
+
       <footer>
-        <hr class="f-divider">
-        <section>
-          <a class="Contact" href="Contact.html">CONTACT</a>
+        <section class="f-left">
+          <!-- Copyright -->
+        <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
+        <div class="footer-right">
           <a href="https://github.com/julsrodd"><img src="/images/github-icon.png" alt="github"></a>
           <a href="https://www.linkedin.com/in/juliannarodriguezdolsen/"><img src="/images/linkedin-icon.png" alt="linkedin"></a>
           <a href="https://dribbble.com/julsrod"><img src="images/dribbble-icon.png" alt="dribbble"></a>
+        </div>
         </section>
-      <!-- Copyright -->
-    <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
       </footer>
   </body>
 </html>
