--- a/BusyBus.html
+++ b/BusyBus.html
@@ -12,9 +12,9 @@
   <body>
     <div class= "container">
     <section>
-      <img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" >
+      <a href="Index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a>
       <nav class="topnav">
-      <a href="#work">Work</a>
+      <a href="Index">Work</a>
       <a  class="active" href="#about">About</a>
       <a href="#contact">Contact</a>
       </nav>
@@ -106,18 +106,16 @@
 
 </section>
 
-
-
-    <footer>
-      <hr>
-      <section>
-        <a class="Contact" href="Contact.html">CONTACT</a>
-        <a href="https://github.com/julsrodd"><img src="/images/github-icon.png" alt="github"></a>
-        <a href="https://www.linkedin.com/in/juliannarodriguezdolsen/"><img src="/images/linkedin-icon.png" alt="linkedin"></a>
-        <a href="https://dribbble.com/julsrod"><img src="images/dribbble-icon.png" alt="dribbble"></a>
-      </section>
-    <!-- Copyright -->
-  <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
-    </footer>
+      <footer>
+        <section class="f-left">
+          <!-- Copyright -->
+        <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
+        <div class="footer-right">
+          <a href="https://github.com/julsrodd"><img src="/images/github-icon.png" alt="github"></a>
+          <a href="https://www.linkedin.com/in/juliannarodriguezdolsen/"><img src="/images/linkedin-icon.png" alt="linkedin"></a>
+          <a href="https://dribbble.com/julsrod"><img src="images/dribbble-icon.png" alt="dribbble"></a>
+        </div>
+        </section>
+      </footer>
   </body>
 </html>
