--- a/Contact.html
+++ b/Contact.html
@@ -35,15 +35,18 @@
 </div>
   </section>
 
-    <footer>
-    <hr class="f-divider">
-        <a class="Contact" href="Contact.html">CONTACT</a>
-        <a href="https://github.com/julsrodd"><img src="/images/github-icon.png" alt="github"></a>
-        <a href="https://www.linkedin.com/in/juliannarodriguezdolsen/"><img src="/images/linkedin-icon.png" alt="linkedin"></a>
-        <a href="https://dribbble.com/julsrod"><img src="images/dribbble-icon.png" alt="dribbble"></a>
-    <!-- Copyright -->
-  <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
-</footer>
+
+        <footer>
+          <section class="f-left">
+            <!-- Copyright -->
+          <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
+          <div class="footer-right">
+            <a href="https://github.com/julsrodd"><img src="/images/github-icon.png" alt="github"></a>
+            <a href="https://www.linkedin.com/in/juliannarodriguezdolsen/"><img src="/images/linkedin-icon.png" alt="linkedin"></a>
+            <a href="https://dribbble.com/julsrod"><img src="images/dribbble-icon.png" alt="dribbble"></a>
+          </div>
+          </section>
+        </footer>
 </div>
   </body>
 </html>
