--- a/Index.html
+++ b/Index.html
@@ -47,28 +47,30 @@
 
     <section class="busybus-project">
       <i class="right-square"><img src="images/right-rectangle.png" alt=""></i>
+        <i class= "busybus-image"><img src=images/iphone-busybus.png alt="busybus app"></i>
       <div class="b3-container">
         <h3>BusyBus</h3>
         <p>UX Design, Visual design, user research & testing</p>
         <a href="BusyBus.html">View Project</a>
       </div>
       <div class="b4-container">
-      <i class= "busybus-image"><img src=images/iphone-busybus.png alt="busybus app"></i>
+
       </div>
 
     </section>
 
-      <footer>
-        <hr>
-        <section>
-          <a class="Contact" href="Contact.html">CONTACT</a>
-          <a href="https://github.com/julsrodd"><img src="/images/github-icon.png" alt="github"></a>
-          <a href="https://www.linkedin.com/in/juliannarodriguezdolsen/"><img src="/images/linkedin-icon.png" alt="linkedin"></a>
-          <a href="https://dribbble.com/julsrod"><img src="images/dribbble-icon.png" alt="dribbble"></a>
-        </section>
-      <!-- Copyright -->
-    <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
-      </footer>
+
+          <footer>
+            <section class="f-left">
+              <!-- Copyright -->
+            <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
+            <div class="footer-right">
+              <a href="https://github.com/julsrodd"><img src="/images/github-icon.png" alt="github"></a>
+              <a href="https://www.linkedin.com/in/juliannarodriguezdolsen/"><img src="/images/linkedin-icon.png" alt="linkedin"></a>
+              <a href="https://dribbble.com/julsrod"><img src="images/dribbble-icon.png" alt="dribbble"></a>
+            </div>
+            </section>
+          </footer>
 </div>
   </body>
 </html>
