--- a/About.html
+++ b/About.html
@@ -86,8 +86,9 @@
 
   <section class="a-cta">
   <h3>  Want to collaborate or just say hi? </h3>
-  <button type="button" id="contactme" title="Go to top">Contact Me</button>
+  <a href='Contact.html'><button class="c-button">Contact Me</button></a>
   </section>
+
 
 
 
