--- a/Billow.html
+++ b/Billow.html
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <a name="top"></a>
     <div class= "container">
     <section class="main-menu">
       <a href="Index.html"><img class="logo" src="images/jrlogo.png" alt="Julianna Rodríguez Logo" ></a></p>
@@ -330,27 +331,29 @@
   screens first to ensure that the user’s frustrations and key needs are prioritized.
 </p>
 </section>
+
 <section class="b-improv">
   <h3>Future Improvements</h3>
   <p>
-If I had more time, I would integrate additional key features  like  notes, spreadsheets and adding tags to allow users to create more types of content quickly, engage even further with their teams or clients. I would also work on filtering and sorting options for the dashboard as well as integrations (Design Tools, Project Management, Calendars) so that users have flexibility in their process.
+If I had more time, I would integrate additional key features  like  notes, spreadsheets
+nd adding tags to allow users to create more types of content quickly, engage even further
+with their teams or clients. I would also work on filtering and sorting options for the dashboard
+as well as integrations (Design Tools, Project Management, Calendars) so that users have flexibility in their process.
 </p>
-  <button onclick="topFunction().href='billow-banner'" id="myBtn" title="Go to top">Back To Top</button>
+<a class="top2" href="#top">Back To Top</a>
 </section>
 
 
-
-
-      <footer>
-        <section class="f-left">
-          <!-- Copyright -->
-        <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
-        <div class="footer-right">
-          <a href="https://github.com/julsrodd"><img src="/images/github-icon.png" alt="github"></a>
-          <a href="https://www.linkedin.com/in/juliannarodriguezdolsen/"><img src="/images/linkedin-icon.png" alt="linkedin"></a>
-          <a href="https://dribbble.com/julsrod"><img src="images/dribbble-icon.png" alt="dribbble"></a>
-        </div>
-        </section>
-      </footer>
+<footer>
+  <section class="f-left">
+    <!-- Copyright -->
+  <p class="copyright">&copy; Designed and Developed by Julianna Rodríguez</p>
+  <div class="footer-right">
+    <a href="https://github.com/julsrodd"><img src="/images/github-icon.png" alt="github"></a>
+    <a href="https://www.linkedin.com/in/juliannarodriguezdolsen/"><img src="/images/linkedin-icon.png" alt="linkedin"></a>
+    <a href="https://dribbble.com/julsrod"><img src="images/dribbble-icon.png" alt="dribbble"></a>
+  </div>
+  </section>
+</footer>
   </body>
 </html>
